gitops/ingress/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: argocd-ingress
  namespace: argocd

  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"

spec:
  ingressClassName: nginx

  rules:
    - host: argocd.shopnoltd.dpdns.org

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: argocd-server

                port:
                  number: 80
