gitops/ingress/cursor-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cursor-ingress
  annotations: {}
spec:
  ingressClassName: traefik
  rules:
  - host: cursor.shopnoltd.dpdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cursor-service
            port:
              number: 80
