gitops/ingress/kf-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kf-ingress
spec:
  rules:
  - host: kf.shopnoltd.dpdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kf
            port:
              number: 80
