gitops/ingress/kobo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kobo-ingress
  namespace: kobo
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - kf.shopnoltd.dpdns.org
        - kc.shopnoltd.dpdns.org
        - ee.shopnoltd.dpdns.org
        - kobo.shopnoltd.dpdns.org
        - kpi.shopnoltd.dpdns.org
      secretName: kobo-tls
  rules:
    - host: kf.shopnoltd.dpdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kobocat
                port:
                  number: 8000
    - host: kc.shopnoltd.dpdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kobocat
                port:
                  number: 8000
    - host: ee.shopnoltd.dpdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kpi
                port:
                  number: 8000
    - host: kobo.shopnoltd.dpdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kpi
                port:
                  number: 8000
    - host: kpi.shopnoltd.dpdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kpi
                port:
                  number: 8000
