gitops/ingress/kpi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kpi-ingress
spec:
  rules:
  - host: kpi.shopnoltd.dpdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kpi
            port:
              number: 80
