gitops/ingress/root-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: root-ingress
spec:
  rules:
  - host: shopnoltd.dpdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: root
            port:
              number: 80
