gitops/ingress/storage-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: storage-ingress
  namespace: storage
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"

spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - storage.shopnoltd.dpdns.org
      secretName: storage-tls

  rules:
    - host: storage.shopnoltd.dpdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: storage-service
                port:
                  number: 80
